--- a/Daily-Practice-Codes/Project-11-(Basic)/src/main/webapp/input.html
+++ b/Daily-Practice-Codes/Project-11-(Basic)/src/main/webapp/input.html
@@ -1,30 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>Objective-3</title>
+    <meta charset="UTF-8">
+    <title>Objective-3</title>
 </head>
 <body>
 
 <form action="DisplayServlet" method="get">
-	Enter First Name:
-	<input type="text" id="id1" name="fname"></input><br />
+    Enter First Name:
+    <input type="text" id="id1" name="fname"><br />
 
-	Enter Last Name:
-	<input type="text" id="id2" name="lname"></input><br />
+    Enter Last Name:
+    <input type="text" id="id2" name="lname"><br />
 
-	Enter DOB:
-	<input type="text" id="id3" name="DOB"></input><br />
+    Enter DOB:
+    <input type="text" id="id3" name="DOB"><br />
 
-	Enter Moto:
-	<input type="text" id="id4" name="moto"></input><br />
+    Enter Moto:
+    <input type="text" id="id4" name="moto"><br />
 
-	Enter MobineNo:
-	<input type="number" id="id5" name="mobileno"></input><br />
-	
-	<input type="submit" id="btn" value="Click to View Details"></input>
+    Enter Mobile No:
+    <input type="number" id="id5" name="mobileno"><br />
+
+    <input type="submit" id="btn" value="Click to View Details">
 </form>
-
 
 </body>
 </html>
