--- a/Daily-Practice-Codes/Project-2-(Intro to Servlet)/src/main/webapp/index.html
+++ b/Daily-Practice-Codes/Project-2-(Intro to Servlet)/src/main/webapp/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
+    <meta charset="UTF-8">
+    <title>Insert title here</title>
 </head>
 <body>
-	<h1><a href="page">This is link to navigate!!!</a></h1>
+    <h1><a href="page">This is a link to navigate!!!</a></h1>
 </body>
 </html>
