--- a/Daily-Practice-Codes/Project-3-(Lazy-Eager Loading)/src/main/webapp/index.html
+++ b/Daily-Practice-Codes/Project-3-(Lazy-Eager Loading)/src/main/webapp/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
+    <meta charset="UTF-8">
+    <title>Insert title here</title>
 </head>
 <body>
-	<h1><a href="jump1">Link To Navigate To Other Page-servlet1</a> </h1>
-	<h1><a href="jump2">Link To Navigate To Other Page-servlet2</a> </h1>
+    <h1><a href="jump1">Link To Navigate To Other Page - Servlet 1</a></h1>
+    <h1><a href="jump2">Link To Navigate To Other Page - Servlet 2</a></h1>
 </body>
 </html>
