--- a/Daily-Practice-Codes/Project-4-(Arithmetic Operations)/src/main/webapp/input.html
+++ b/Daily-Practice-Codes/Project-4-(Arithmetic Operations)/src/main/webapp/input.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <body>
-	<form action="add">
-	Enter First Number: <input type="number" name="num1"><br />
-	Enter Second Number: <input type="number" name="num2"><br />
-	<input type="submit">
+	<form action="add"> <!-- The form submits data to the "add" endpoint -->
+		Enter First Number: <input type="number" name="num1"><br /> <!-- Input field for the first number -->
+		Enter Second Number: <input type="number" name="num2"><br /> <!-- Input field for the second number -->
+		<input type="submit"> <!-- Submit button to submit the form -->
 	</form>
 </body>
 </html>
