--- a/Daily-Practice-Codes/Project-6-(Voter Login-Case Study)/src/main/webapp/login.html
+++ b/Daily-Practice-Codes/Project-6-(Voter Login-Case Study)/src/main/webapp/login.html
@@ -5,7 +5,8 @@
     <title>Login Form</title>
   </head>
   <body>
-    <form action="login" method="post">						
+    <form action="login" method="post">
+      <!-- The form submits data to the "login" endpoint using POST method -->
       <table style="background-color: lightgrey; margin: auto">
         <tr>
           <td>Enter User Email</td>
@@ -24,4 +25,4 @@
   </body>
 </html>
 
-<!-- when clicked url will be ... /day2.1/login -->
+<!-- when clicked, the URL will be "/day2.1/login" -->
