--- a/Daily-Practice-Codes/Project-7-(URL Rewriting)/src/main/webapp/index.html
+++ b/Daily-Practice-Codes/Project-7-(URL Rewriting)/src/main/webapp/index.html
@@ -2,9 +2,12 @@
 <html>
 <body>
 	<form action="add">
-	Enter First Number: <input type="number" name="num1"><br />
-	Enter Second Number: <input type="number" name="num2"><br />
-	<input type="submit">
+		<!-- Input field for the first number -->
+		Enter First Number: <input type="number" name="num1"><br />
+		<!-- Input field for the second number -->
+		Enter Second Number: <input type="number" name="num2"><br />
+		<!-- Submit button -->
+		<input type="submit">
 	</form>
 </body>
 </html>
